@@ -1,3 +1,6 @@
+* 2018-12-22
+- Galette 0.9.2 compatible
+
 * 2018-10-27 - 1.0.2
 - Storing activites on bookings was kind of broken
 - Fix bookings export
